--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     #settingsPopup {
       display: none;
       position: absolute;
-      top: 50px;
-      left: 10px;
+      top: 0px;
+      right: 0px;
       background: #111;
       border: 1px solid #444;
       padding: 12px;
       z-index: 1000;
-      font-size: 12px;
+      font-size: 2vw;
     }
     #settingsPopup select, #settingsPopup input, #settingsPopup button {
       margin: 4px 4px 4px 0;
