--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     }
     #settingsToggle {
       padding: 10px;
+      right: 0px;
       background: #222;
       color: #fff;
       border: none;
@@ -62,7 +63,7 @@
       z-index: 10;
     }
     .remove-btn {
-      top: 2px; right: 2px;
+      top: 0px; right: 0px;
       background: red; color: #fff;
     }
     .move-btn {
